Show menu over image and fix svg issue on IE

--- a/wp-content/themes/valli/assets/css/styles.css
+++ b/wp-content/themes/valli/assets/css/styles.css
@@ -895,6 +895,7 @@ article main .btn {
   transition: 0.3s all ease-in-out;
   border-radius: 6px;
   box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.1);
+  z-index: 9;
 }
 @media (min-width: 50em) {
   .global-header__nav .menu .sub-menu {
