--- a/wp-content/themes/valli/src/styles/components/_header.scss
+++ b/wp-content/themes/valli/src/styles/components/_header.scss
@@ -104,6 +104,7 @@
 			transition: .3s all ease-in-out;
 			border-radius: 6px;
 			box-shadow: 0 0 15px 0px rgba(0,0,0,0.1);
+			z-index: 9;
 			@include mq(medium) {
 				visibility: hidden;
 				opacity: 0;
